# aerocore

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  paper.yml  publish-pypi.yml  tests.yml
airtrafficsim/: __main__.py  geometry.py  types.py
airtrafficsim/core/: aircraft.py  autopilot.py  environment.py  navigation.py  traffic.py
airtrafficsim/core/performance/: bada.py  performance.py
airtrafficsim/core/weather/: era5.py  weather.py
airtrafficsim/data/environment/: ConvertHistoricDemo.py  DemoEnv.py  FullFlightDemo.py  OpenApDemo.py  WeatherDemo.py
airtrafficsim/experimental/: README.md  __init__.py  _polars_array_api.py  annotations.py  common.py  constants.py  quantity.py  unit_conversion.py
airtrafficsim/experimental/data/: airports.py  era5.py
airtrafficsim/experimental/geospatial/: __init__.py  airports.py  point.py
airtrafficsim/experimental/performance/: airspeed.py  bada3.py  era5.py  isa.py
airtrafficsim/experimental/thermodynamics/: __init__.py
airtrafficsim/server/: __init__.py  data.py  replay.py  server.py
airtrafficsim/utils/: calculation.py  enums.py  route_detection.py  unit_conversion.py
client/: .env  .env.example  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
client/src/: App.old.tsx  App.scss  App.tsx  index.css  index.scss  index.tsx  socket.ts
client/src/context/: CesiumContext.ts
client/src/lib/: Footer.svelte  Map.svelte  Sidebar.svelte
client/src/pages/: Simulation.scss  Simulation.tsx  Simulation_old.tsx
client/src/theme/: variables.css
docs/: README.md  acropole.md  capabilities.md  install.md  start.md
docs/api/: acropole.md  core.md  data.md  experimental.md  index.md  misc.md  types.md
docs/development/: client.md  documentation.md  guide.md  structure.md
docs/tutorial/: UI.md  creating_env.md  data.md  flight_plan.md  historic.md  openap.md  replay.md  simulation.md  weather.md
examples/: acropole_jax_gpu.py  acropole_jax_gradient.py  acropole_mixed_aircraft.py  acropole_numpy.py  acropole_torch_gpu.py  autodiff.py  capabilities_jax.py  capabilities_polars.py  lazy_evaluation.py
scripts/: acropole_benchmark.py  acropole_prepare_model.py  check_polars_array_api.py  make.py  style-check.sh
scripts/tangram/: README.md  fake_publisher.py
src/aerocore/: __init__.py  acropole.py  airspeed.py  array_api.py  bada3.py  cli.py  column.py  constants.py  geo.py  plot.py  polars.py  thermo.py  turbofan.py  types.py  utils.py
src/aerocore/data/: adsblol.py  aircraft_types.py  airports.py  engine_emissions.py  era5.py
src/airtrafficsim/: __init__.py  airspeed.py  annotations.py  bada3.py  column.py  geo.py  quantity.py  types.py  units.py
src/airtrafficsim/data/: aircraft_types.py  airports.py  era5.py
src/airtrafficsim/geospatial/: __init__.py  point.py
src/airtrafficsim/performance/: airspeed.py  bada3.py  isa.py
src/airtrafficsim/thermodynamics/: __init__.py
tests/: conftest.py  test_acropole.py  test_array_api.py  test_environment.py  test_experimental.py  test_external_data.py  test_performance.py  test_ui.py  test_utils.py
tests/experimental/: test_external_data.py  test_performance.py
