[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AirTrafficSim"
version = "0.2.0"
authors = [
    { name = "Frankie Hui", email = "kyhuiaf@connect.ust.hk" },
]
description = "A web-based air traffic simulation software written in Python and TypeScript."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["air transportation", "atm", "simulations", "visualisation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    # "Framework :: Flask",
]
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.3",
]

[project.urls]
Documentation = "https://hkust-octad-lab.github.io/AirTrafficSim/"
Repository = "https://github.com/HKUST-OCTAD-LAB/AirTrafficSim"

[project.scripts]
airtrafficsim = "airtrafficsim.__main__:main"
# [tool.setuptools]
# packages = ["airtrafficsim", 
#             "airtrafficsim.core",
#             "airtrafficsim.core.weather",
#             "airtrafficsim.core.performance",
#             "airtrafficsim.data", 
#             "airtrafficsim.server", 
#             "airtrafficsim.utils"]
# include-package-data = true

[project.optional-dependencies]
web = [
    "flask-socketio>=5.4.1",
    "flask>=3.1.0",
    "eventlet>=0.38.2",
]
era5 = [
    "cartopy>=0.24.1",
    "cdsapi>=0.7.5",
    "xarray>=2024.11.0",
]
openap = [
    "openap>=2.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "ruff>=0.8.3",
]
test = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]
docs = [
    "mkdocs-material[imaging]>=9.5.49",
    "mkdocstrings-python>=1.12.2",
]

[tool.uv]
default-groups = ["dev", "test", "docs"]

[tool.ruff]
lint.select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]
line-length = 80
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas"]

[tool.mypy]
python_version = "3.10"
platform = "posix"
color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true