[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aerocore"
version = "0.2.1"
authors = [{ name = "Abraham Cheung", email = "abraham@ylcheung.com" }]
description = "A lightweight collection of tools for air traffic management research."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["air transportation", "atm", "visualisation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["isqx>=0.1.2", "numpy>=2"]

[project.urls]
Repository = "https://github.com/abc8747/aerocore"

[project.optional-dependencies]
polars = ["polars[calamine]>=1.18.0"]
httpx = ["httpx[http2]>=0.28.1"]
xarray = ["xarray>=2024.11.0"]
jax = ["jax>=0.5.0"]
matplotlib = ["matplotlib>=3.10.0"]
rich = ["rich>=14.0.0"]
all = ["aerocore[polars,httpx,xarray,jax,matplotlib,rich]"]


[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    "array-api-strict>=2.2",
    "ipykernel>=6.29.5",
    "mypy>=1.13.0",
    "ruff>=0.8.3",
    "typer>=0.16.0",
    "types-pytz>=2024.2.0.20241221",
]
test = ["pytest-cov>=6.0.0", "pytest>=8.3.4", "anyio>=4.7.0"]
docs = [
    "zensical>=0.0.43",
    "mkdocstrings-python>=2.0.3",
]

[tool.ruff]
lint.select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    # "PD",  # pandas
    "DTZ", # flake8-datetimez
    "RUF",
]
line-length = 80
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["numpy", "pandas"]

[tool.mypy]
python_version = "3.10"
platform = "posix"
color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

# isqx's Annotated[_T, ...] makes _T a generic parameter
# we disable type-arg otherwise mypy will always complain with a bare `t.CasMPS` 
[[tool.mypy.overrides]]
module = [
    "aerocore.constants",
    "aerocore.thermo",
    "aerocore.airspeed",
    "aerocore.bada3",
    "aerocore.geo",
    "aerocore.turbofan",
]
disable_error_code = ["type-arg"]

[[tool.mypy.overrides]]
module = ["aerocore.array_api"]
disable_error_code = ["type-arg", "no-untyped-def"]
